--- a/app/partials/commonStream.html
+++ b/app/partials/commonStream.html
@@ -46,7 +46,7 @@
                     </div>
                 </div>
 
-                <div style="padding-top: 35px;height:150px">
+                <div style="padding-top: 35px;height:150px;font-size: 12px">
                     <legend style="font-size: 13px">为您推荐的声音 </legend>
 
                     <div ng-if="recommendSounds.length > 0"  class="row">
