--- a/app/partials/upload.html
+++ b/app/partials/upload.html
@@ -3,7 +3,7 @@
 <div class="row">
 <div class="col-md-3">
 </div>
-<div class="col-md-6" style="padding-top: 10px">
+<div class="col-md-6">
 <form name="upload_form" style="padding-top: 10px">
 
 <div id="upload_error" class="{{defaultSound.uploadMsgClass}}" style="padding-left: 20px">
@@ -40,8 +40,8 @@
           <span ng-show="!defaultSound.isSoundUploading" href="#"
                 class="button button-small button-rounded button-flat-highlight action-button fileinput-button">
                 <i class="icon-plus icon-white"></i>
-                <span>更换音频</span>
-                <input id="sound_change_upload" type="file" name="file" class="upload_button">
+                <span>拖放在本页更换新音频</span>
+                <!--<input id="sound_change_upload" type="file" name="file" class="upload_button">-->
          </span>
         <button ng-show="defaultSound.isSoundUploading" ng-click="cancelUpload()"
            class="button button-small button-rounded button-flat-highlight">
@@ -127,7 +127,7 @@
 
                 <div style="padding-top: 15px">
                     <div class="row">
-                        <div class="col-md-3">
+                        <div class="col-md-4" style="width: 145px">
                             <label style="color:rgb(51, 51, 51)">隐私</label> <br>
 
                             <div class="btn-group">
@@ -141,7 +141,7 @@
                             </div>
                         </div>
 
-                        <div class="col-md-3">
+                        <div class="col-md-3" style="padding: 0px">
                             <label style="color:rgb(51, 51, 51)">评论模式</label><br>
 
                             <div class="btn-group" style="padding-top: 8px">
@@ -151,7 +151,7 @@
                             </div>
                         </div>
 
-                        <div class="col-md-3" style="padding-left: 20px">
+                        <div class="col-md-4" style="width: 145px">
                             <label style="color:rgb(51, 51, 51)">声音类型</label>
                             <br>
 
@@ -167,9 +167,9 @@
                             </div>
                         </div>
 
-                        <div class="col-md-3 btn-group" data-toggle="buttons-radio" style="padding: 15px"
+                        <div class="col-md-2 btn-group" data-toggle="buttons-radio" style="padding: 15px;"
                              ng-show="defaultSound.recordType == 'original'">
-                            <label ng-click="showMore=!showMore" style="color: gray;margin-top: 20px"><b>更多选项</b>
+                            <label ng-click="showMore=!showMore" style="color: gray;margin-top: 20px;cursor: pointer;"><b>更多..</b>
                                 <i ng-show="!showMore" class="icon-chevron-right"></i>
                                 <i ng-show="showMore" class="icon-chevron-down"></i>
                             </label>
