--- a/app/partials/header.html
+++ b/app/partials/header.html
@@ -1,11 +1,12 @@
 <div ng-controller="headerCtrl">
 
 <ul class="nav nav-pills navbar-fixed-top visible-xs" style="background-color: white">
-    <li ng-if="!userService.validateRoleGuest()"><a href="#" ng-click="goto('/stream')"><i class="icon-eye-open icon-2x"></i></a></li>
+    <li ng-if="!userService.validateRoleGuest()"><a href="#" ng-click="goto('/stream')"><i
+            class="icon-eye-open icon-2x"></i></a></li>
     <li ng-if="!userService.validateRoleGuest()">
         <a href="#" onclick="return false;" ng-click="goto('/stream/{{userAlias}}')"><i
                 class="icon-bullhorn icon-2x"></i></a></li>
-    <li >
+    <li>
         <a href="#" onclick="return false;" ng-click="goto('/interest')"><i class="icon-question-sign icon-2x"></i></a>
     </li>
     <li>
@@ -15,22 +16,28 @@
         <ul class="dropdown-menu" role="menu">
             <li ng-if="!userService.validateRoleGuest()">
                 <a
-                   href="#" onclick="return false;" ng-click="goto('/messages')"><i class="icon-envelope"></i> 我的消息</a>
+                        href="#" onclick="return false;" ng-click="goto('/messages')"><i class="icon-envelope"></i> 我的消息</a>
             </li>
             <li role="presentation"
-                style="border-left-width: 1px;border-left-style: solid;border-left-color: rgba(0, 0, 0, 0.498039);" ng-if="!userService.validateRoleGuest()">
+                style="border-left-width: 1px;border-left-style: solid;border-left-color: rgba(0, 0, 0, 0.498039);"
+                ng-if="!userService.validateRoleGuest()">
                 <a role="menuitem" tabindex="-1"
                    href="#" onclick="return false;" ng-click="goto('/profile')"><i class="icon-cog"></i> 个人设置</a>
             </li>
-            <li role="presentation" class="hidden-xs" ng-if="!userService.validateRoleGuest()"><a role="menuitem" tabindex="-1" href="#"
-                                                         onclick="return false;"
-                                                         ng-click="goto('/upload')"><i
+            <li role="presentation" class="hidden-xs" ng-if="!userService.validateRoleGuest()"><a role="menuitem"
+                                                                                                  tabindex="-1" href="#"
+                                                                                                  onclick="return false;"
+                                                                                                  ng-click="goto('/upload')"><i
                     class="icon-cloud-upload"></i> 录制音乐</a>
             </li>
-            <li ng-if="!userService.validateRoleGuest()"><a role="menuitem" tabindex="-1" href="#" onclick="return false;"
-                                       ng-click="logout()"><i class="icon-signout"></i> 退出登陆</a></li>
-            <li ng-if="userService.validateRoleGuest()"><a role="menuitem" tabindex="-1" href="#" onclick="return false;"
-                                                                                ng-click="showLoginForm()"><i class="icon-signin"></i> 登录注册</a></li>
+            <li ng-if="!userService.validateRoleGuest()"><a role="menuitem" tabindex="-1" href="#"
+                                                            onclick="return false;"
+                                                            ng-click="logout()"><i class="icon-signout"></i> 退出登陆</a>
+            </li>
+            <li ng-if="userService.validateRoleGuest()"><a role="menuitem" tabindex="-1" href="#"
+                                                           onclick="return false;"
+                                                           ng-click="showLoginForm()"><i class="icon-signin"></i>
+                登录注册</a></li>
         </ul>
     </li>
 </ul>
@@ -49,7 +56,7 @@
 
         <div style="position : absolute;bottom: 100%;background-color: #333;margin-left: -160px;
             -moz-border-radius-topleft:7px;-webkit-border-top-left-radius: 7px;-moz-border-radius-topright:7px;-webkit-border-top-right-radius: 7px;"
-                ng-blur="showPlaylist=!showPlaylist">
+             ng-blur="showPlaylist=!showPlaylist">
             <div ng-show="showPlaylist" style="height: 230px;width: 220px;overflow: auto;">
                 <div style="padding-top: 5px">
                         <span style="padding-left: 15px">
@@ -82,13 +89,13 @@
                                ng-click="togglePauseList(sound.id)"></i>
                         </span>
                         <span style="width: 135px;white-space: nowrap;/* text-overflow: ellipsis; */overflow: hidden;display: inline-block;">
-                            <marquee scrollamount="{{sound.isPlaying? 3: 0}}"  >
+                            <marquee scrollamount="{{sound.isPlaying? 3: 0}}">
                                 <a href="{{sound.title.route}}" style="width: 100%;">{{sound.title.alias}} -
                                     {{sound.owner.alias}}</a>
                             </marquee>
                         </span>
                         <span class="pull-right" style="padding-right: 10px;">
-                               <a onclick="return false;"  ng-click="removeSoundFromPlaylist(sound)">
+                               <a onclick="return false;" ng-click="removeSoundFromPlaylist(sound)">
                                    <i class="icon-remove" style="color: white"></i></a>
                          </span>
                 </div>
@@ -103,7 +110,7 @@
 <nav class="navbar navbar-inverse navbar-fixed-top hidden-xs" role="navigation">
     <div class="navbar-header">
         <a class="navbar-brand" style="padding: 0px;" href="#" title="Wooice" ng-click="goto('/interest')">
-            <img class="img-responsive" ng-src="img/logo.jpg"   style="width: 50px;height: 50px"/>
+            <img class="img-responsive" ng-src="img/logo.jpg" style="width: 50px;height: 50px"/>
         </a>
     </div>
     <div class="collapse navbar-collapse">
@@ -116,7 +123,7 @@
             </li>
         </ul>
 
-        <form class="navbar-form navbar-left" role="search" style="padding-left: 15%">
+        <form class="navbar-form navbar-left" role="search" style="padding-left: 5%">
             <div class="form-group">
                 <input type="text" id="search_box" class="form-control" ng-model="q" placeholder="寻找一段声音...">
             </div>
@@ -133,7 +140,16 @@
                    ng-class="wooicePlayer.getCurSound().isPlaying? 'icon-pause': 'icon-play'"
                    ng-click="togglePause()"></i></a></li>
             <li ng-show="wooicePlayer.getCurSound().id">
-                <a href="{{wooicePlayer.getCurSound().title.route}}">{{wooicePlayer.getCurSound().title.alias}}</a>
+                <a href="{{wooicePlayer.getCurSound().title.route}}">
+                    <span style="color: white">{{wooicePlayer.getCurSound().title.alias}}</span>
+                </a>
+            </li>
+            <li>
+                <a style="color: #999;font-size: 12px" onclick="return false;">
+                    <span ng-if="wooicePlayer.getCurSound().curPostion>0">{{formatTime(wooicePlayer.getCurSound().curPostion/1000)}}</span>
+                    <span ng-if="wooicePlayer.getCurSound().curPostion>0 && wooicePlayer.getCurSound().duration>0">/</span>
+                    <span ng-if="wooicePlayer.getCurSound().duration>0">{{formatTime(wooicePlayer.getCurSound().duration)}}</span>
+                </a>
             </li>
             <li><a href="#" onclick="return false;" title="下一首"><i
                     style="cursor:pointer;"
@@ -147,40 +163,61 @@
                 <i style="cursor:pointer;" class='icon-minus-sign-alt' ng-show="playMode == 3"></i>
             </a>
             </li>
-            <li style="padding-right: 40px" ng-if="!userService.validateRoleGuest()     ">
-                <a class="playlist" ng-click="showPlaylist=!showPlaylist"><i class="icon-th-list" title="播放列表"></i></a>
+            <li>
+                <a id="playlist_button" style="cursor: pointer;" ng-click="togglePlaylist()"><i class="icon-th-list"
+                                                                                                title="播放列表"></i></a>
 
-                <div style="position : absolute;background-color: #333;margin-left: -65px;
-                -moz-border-radius-bottomleft:7px;-webkit-border-bottom-left-radius: 7px;-moz-border-radius-bottomright:7px;-webkit-border-bottom-right-radius: 7px;" >
-                    <div ng-show="showPlaylist" style="padding-top: 5px;height: 230px;width: 220px;overflow: auto;">
-                        <span style="padding-left:60px;color: white;font-weight: bold;">播放列表({{playList.list().length}})</span>
-                        <hr style="margin: 5px">
-                        <div ng-repeat="sound in playList.list()" style="width: 100%;">
-                            <span style="padding-left: 10px;padding-right: 10px" class="pull-left">
-                                <i style="cursor:pointer;color: white"
-                                   class="sound_player_button {{sound.isPlaying?'icon-pause': 'icon-play-circle'}}"
-                                   ng-click="togglePauseList(sound.id)"></i>
-                            </span>
-                            <span style="width: 135px;white-space: nowrap;/* text-overflow: ellipsis; */overflow: hidden;display: inline-block;">
-                                <marquee scrollamount="{{sound.isPlaying? 3: 0}}"  >
-                                    <a href="{{sound.title.route}}" style="width: 100%;">{{sound.title.alias}} -
-                                        {{sound.owner.alias}}</a>
-                                 </marquee>
-                            </span>
-                             <span class="pull-right" style="padding-right: 10px;padding-left: 5px">
-                                   <a onclick="return false;" ng-click="removeSoundFromPlaylist(sound)"><i
-                                           class="icon-remove" style="color: white"></i></a>
-                             </span>
+                <span id="playlist_content" class="display_panel">
+                        <span class="display_header" ng-click="clearPlaylist()">播放列表<span
+                                style="font-size: 12px;font-weight: normal"> ({{playList.list().length}})</span>
+                            <span class="pull-right" style="cursor: pointer;color: #ffffff;font-size: 12px">清空列表</span>
+                        </span>
+
+                    <span class="display_content_div">
+                        <div class="display_content"><span style="color: white">{{showPlaylist}}</span>
+
+                            <div ng-repeat="sound in playList.list()" class="display_song"
+                                 style="width: 100%;background: {{sound.isPlaying?'#39c':'white'}};">
+                                <span style="padding-left: 10px;padding-right: 10px" class="pull-left">
+                                    <i style="cursor:pointer;color: {{sound.isPlaying?'white':'#666'}}"
+                                       class="sound_player_button {{sound.isPlaying?'icon-pause': 'icon-play-circle'}}"
+                                       ng-click="togglePauseList(sound.id)"></i>
+                                </span>
+                                <span style="width: 135px;white-space: nowrap;overflow: hidden;display: inline-block;font-size: 12px;font-weight: normal">
+                                       <a href="{{sound.title.route}}"
+                                          style="width: 100%;color: {{sound.isPlaying?'white':'#666'}}">{{sound.title.alias}}
+                                           -
+                                           {{sound.owner.alias}}</a>
+                                </span>
+                                 <span class="pull-right" style="padding-right: 10px;padding-left: 5px">
+                                       <a onclick="return false;" ng-click="removeSoundFromPlaylist(sound)"><i
+                                               class="icon-remove"
+                                               style="color: {{sound.isPlaying?'white':'#666'}}"></i></a>
+                                 </span>
+                            </div>
+                            <div ng-show="playList.list().length==0" style="padding-left: 20%;padding-top: 30%">
+                                <span style="color: gray;">您还没有添加任何歌曲</span>
+                            </div>
                         </div>
-                        <div ng-show="playList.list().length==0">
-                            <span style="color: #428bca;padding-left: 25px">您还没有添加任何歌曲</span>
-                        </div>
-                    </div>
+                    </span>
+                </span>
+            </li>
+            <li style="padding-right: 40px">
+                <a ng-click="showVolumePanel=!showVolumePanel" title="音量调节">
+                    <i style="cursor:pointer;"
+                       class='icon-volume-up'></i>
+                </a>
+
+                <div ng-show="showVolumePanel" style="position : absolute;left: 15px;">
+                    <div ui-slider="{orientation: 'vertical', range: 'max'}" min="0" max="100" step="1"
+                         ng-model="volume"></div>
                 </div>
             </li>
-            <li ng-if="!userService.validateRoleGuest()" style="border-left-width: 1px;border-left-style: solid;border-left-color: rgba(0, 0, 0, 0.498039);">
-                <a href="#" onclick="return false;" ng-click="goto('/stream/{{userAlias}}')" title="您的主页"  style="padding: 10px;">
-                       <img ng-src="{{userAvatar}}" class="user_avatar_oval" style="width: 30px;height: 30px"/>
+            <li ng-if="!userService.validateRoleGuest()"
+                style="border-left-width: 1px;border-left-style: solid;border-left-color: rgba(0, 0, 0, 0.498039);">
+                <a href="#" onclick="return false;" ng-click="goto('/stream/{{userAlias}}')" title="您的主页"
+                   style="padding: 10px;">
+                    <img ng-src="{{userAvatar}}" class="user_avatar_oval" style="width: 30px;height: 30px"/>
                 </a>
             </li>
             <li ng-if="!userService.validateRoleGuest()">
@@ -193,15 +230,18 @@
                 <a title="个人配置"
                    href="#" onclick="return false;" ng-click="goto('/profile')"><i class="icon-cog"></i></a>
             </li>
-            <li style="padding-right: 50px" ng-if="!userService.validateRoleGuest()"><a href="#" onclick="return false;" ng-click="goto('/upload')"
-                                               title="声音上传"><i
+            <li style="padding-right: 50px" ng-if="!userService.validateRoleGuest()"><a href="#" onclick="return false;"
+                                                                                        ng-click="goto('/upload')"
+                                                                                        title="声音上传"><i
                     class="icon-cloud-upload"></i></a>
             </li>
             <li><a href="#feedback" onclick="return false;" data-toggle="modal" title="意见反馈"><i
                     class="icon-edit"></i></a></li>
-            <li style="padding-right: 10px" ng-if="userService.validateRoleGuest()"><a href="#" onclick="return false;" ng-click="showLoginForm()"><i
+            <li style="padding-right: 10px" ng-if="userService.validateRoleGuest()"><a href="#" onclick="return false;"
+                                                                                       ng-click="showLoginForm()"><i
                     class="icon-signin" title="注册登录"></i></a></li>
-            <li style="padding-right: 10px" ng-if="!userService.validateRoleGuest()"><a href="#" onclick="return false;" ng-click="logout()"><i
+            <li style="padding-right: 10px" ng-if="!userService.validateRoleGuest()"><a href="#" onclick="return false;"
+                                                                                        ng-click="logout()"><i
                     class="icon-signout" title="退出登录"></i></a></li>
         </ul>
     </div>
