--- a/app/partials/interest.html
+++ b/app/partials/interest.html
@@ -1,5 +1,7 @@
 <style>
-    html{overflow-y:scroll}
+    html {
+        overflow-y: scroll
+    }
 </style>
 
 <ng-include src="'partials/header.html'"></ng-include>
@@ -13,19 +15,25 @@
                     <div ng-repeat="cate in categories | filter:odd">
                         <div>
                             <div class="title_div">
-                                <span class="pull-right" style="font-size: 10px;height: 50px"> <label ng-click="cate.showAll=!cate.showAll">More
-                                    <i class="icon-double-angle-right" ng-show="cate.showAll"></i><i class="icon-double-angle-down" ng-show="!cate.showAll"></i></label>
+                                <span class="pull-right tags_more"> <label style="cursor: pointer;"
+                                        ng-click="cate.showAll=!cate.showAll">More
+                                    <i class="icon-double-angle-right" ng-show="cate.showAll"></i><i
+                                            class="icon-double-angle-down" ng-show="!cate.showAll"></i></label>
                                 </span>
+
                                 <h2 class="title_h2">{{cate.name}}
                                 </h2>
+
                                 <div style="clear: both;"></div>
                             </div>
                             <div>
                                 <ul class="tags" style="padding-top: 10px">
-                                    <li ng-repeat="curatedTag in curatedTags | filter:{category.name: cate.name}"  ng-show="cate.showAll || $index<5"
-                                         style="padding-right: 25px;padding-bottom: 30px;float: left">
-                                        <a  onclick="return false;" ng-click="toogleInterest()" style="background: {{curatedTag.class}};cursor:pointer;">
-                                           <span > {{curatedTag.label}}   </span>
+                                    <li ng-repeat="curatedTag in curatedTags | filter:{category.name: cate.name}"
+                                        ng-show="cate.showAll || $index<5"
+                                        style="padding-right: 25px;padding-bottom: 30px;float: left">
+                                        <a onclick="return false;" ng-click="toogleInterest()"
+                                           style="background: {{curatedTag.class}};cursor:pointer;">
+                                            <span> {{curatedTag.label}}   </span>
                                         </a>
                                     </li>
                                 </ul>
@@ -40,18 +48,24 @@
                     <div ng-repeat="cate in categories | filter:even">
                         <div>
                             <div class="title_div">
-                                <span class="pull-right" style="font-size: 10px;height: 50px"> <label ng-click="cate.showAll=!cate.showAll">More
-                                    <i class="icon-double-angle-right" ng-show="cate.showAll"></i><i class="icon-double-angle-down" ng-show="!cate.showAll"></i></label></span>
+                                <span class="pull-right tags_more"> <label style="cursor: pointer;"
+                                        ng-click="cate.showAll=!cate.showAll">More
+                                    <i class="icon-double-angle-right" ng-show="cate.showAll"></i><i
+                                            class="icon-double-angle-down" ng-show="!cate.showAll"></i></label></span>
+
                                 <h2 class="title_h2">{{cate.name}}
                                 </h2>
+
                                 <div style="clear: both;"></div>
                             </div>
                             <div>
                                 <ul class="tags" style="padding-top: 10px">
-                                    <li ng-repeat="curatedTag in curatedTags | filter:{category.name: cate.name}"  ng-show="cate.showAll || $index<5"
+                                    <li ng-repeat="curatedTag in curatedTags | filter:{category.name: cate.name}"
+                                        ng-show="cate.showAll || $index<5"
                                         style="padding-right: 25px;padding-bottom: 30px;float: left">
-                                        <a onclick="return false;" ng-click="toogleInterest()" style="background: {{curatedTag.class}};cursor:pointer;">
-                                              <span > {{curatedTag.label}}    </span>
+                                        <a onclick="return false;" ng-click="toogleInterest()"
+                                           style="background: {{curatedTag.class}};cursor:pointer;">
+                                            <span> {{curatedTag.label}}    </span>
                                         </a>
                                     </li>
                                 </ul>
@@ -74,36 +88,40 @@
                     <li ng-repeat="recommendUser in recommendUsers"
                         style="padding: 5px;padding-bottom: 10px">
                         <a href="{{recommendUser.route}}">
-                             <img ng-src="{{recommendUser.profile.avatorUrl}}" class="title_link"
-                                  ng-mouseover="recommendUser.isHovering=true" style="{{deviceEnv=='xs'?'width:100px;height:100px':''}}">
-                             <a href="{{recommendUser.route}}" >
-                                 <b class="user_mask" ng-show="recommendUser.isHovering"
-                                    ng-mouseleave="recommendUser.isHovering=false"></b>
-                                <b class="user_mask_info" ng-show="recommendUser.isHovering"
-                                   ng-mouseleave="recommendUser.isHovering=false">
+                            <img ng-src="{{recommendUser.profile.avatorUrl}}" class="title_link"
+                                 ng-mouseenter="recommendUser.isHovering=true"
+                                 style="{{deviceEnv=='xs'?'width:100px;height:100px':''}}">
+
+                            <div ng-show="recommendUser.isHovering" ng-mouseleave="recommendUser.isHovering=false">
+                                <a href="{{recommendUser.route}}">
+                                    <b class="user_mask"></b>
+                                    <b class="user_mask_info">
                                          <span title="{{user.userSocial.sounds}}条声音" class="ng-binding">{{recommendUser.userSocial.sounds}}
-                                                <i class="icon-music" title="{{recommendUser.userSocial.sounds}}条声音"></i></span>
+                                                <i class="icon-music"
+                                                   title="{{recommendUser.userSocial.sounds}}条声音"></i></span>
                                             <span style="padding-left: 5px" title="关注{{user.userSocial.following}}人"
                                                   class="ng-binding">{{recommendUser.userSocial.following}}
-                                                <i class="icon-user" title="关注{{recommendUser.userSocial.following}}人"></i></span>
+                                                <i class="icon-user"
+                                                   title="关注{{recommendUser.userSocial.following}}人"></i></span>
                                             <span style="padding-left: 5px" title="{{user.userSocial.followed}}人关注"
                                                   class="ng-binding">{{recommendUser.userSocial.followed}}
-                                                <i class="icon-group" title="{{recommendUser.userSocial.followed}}人关注"></i></span>
-                                </b>
-                                <b class="user_mask_desc" ng-show="recommendUser.isHovering"
-                                   ng-mouseleave="recommendUser.isHovering=false">
-                                    <span>{{recommendUser.profile.descSummary}}</span>
-                                </b>
-                             </a>
-                            <b class="user_mask_follow" ng-show="recommendUser.isHovering"
-                               ng-mouseleave="recommendUser.isHovering=false">
-                                <a href="#" class="btn btn-primary button-tiny form-control ng-binding"
-                                   onclick="return false;" ng-click="follow(recommendUser)">
-                                    <span ng-if="recommendUser.userPrefer.following">关注中</span>
-                                    <span ng-if="!recommendUser.userPrefer.following">关注</span>
+                                                <i class="icon-group"
+                                                   title="{{recommendUser.userSocial.followed}}人关注"></i></span>
+                                    </b>
+                                    <b class="user_mask_desc">
+                                        <span>{{recommendUser.profile.descSummary}}</span>
+                                    </b>
                                 </a>
-                            </b>
+                                <b class="user_mask_follow">
+                                    <a href="#" class="btn btn-primary button-tiny form-control ng-binding"
+                                       onclick="return false;" ng-click="follow(recommendUser)">
+                                        <span ng-if="recommendUser.userPrefer.following">关注中</span>
+                                        <span ng-if="!recommendUser.userPrefer.following">关注</span>
+                                    </a>
+                                </b>
+                            </div>
                         </a>
+
                         <div class="user_alias">
                             {{recommendUser.profile.alias}}
                         </div>
@@ -127,5 +145,5 @@
 </div>
 
 <div>
-<ng-include src="'partials/footer.html'"></ng-include>
+    <ng-include src="'partials/footer.html'"></ng-include>
 </div>
