set up new tag select panel

--- a/app/partials/modals/feedback.html
+++ b/app/partials/modals/feedback.html
@@ -30,7 +30,7 @@
                 </div>
                 <div class="modal-footer">
                     <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
-                    <button class="btn btn-primary" ng-click="sendFeedback()" ng-disabled="feedback.$invalid">保存
+                    <button class="btn btn-primary" ng-click="sendFeedback()" ng-disabled="feedback.$invalid">发生
                     </button>
                 </div>
             </div>
