--- a/app/partials/upload.html
+++ b/app/partials/upload.html
@@ -181,7 +181,7 @@
                         <hr>
                         <div class="row" style="padding-bottom: 10px">
                             <div class="btn-group col-md-6" data-toggle="buttons-radio" style="padding-top: 5px">
-                                <label>版权注册编码(ISWC编码)</label>
+                                <label>版权注册编码－ISWC编码(可选)</label>
 
                                 <div class="text-warning"
                                      ng-show="upload_form.rightNumber.$dirty && upload_form.rightNumber.$invalid">
