--- a/app/partials/sound.html
+++ b/app/partials/sound.html
@@ -13,7 +13,7 @@
                          ng-show="mode == 'default' && !userService.validateRoleGuest() && sound.owner.alias == userService.getCurUserAlias()">
                                   <span ng-show="!isUploadingPoster"
                                         class="button button-small button-rounded button-flat form-control fileinput-button">
-                                    <span>上传海报</span>
+                                    <span>传海报</span>
                                     <input id="poster_upload" type="file" name="file">
                                   </span>
 
