--- a/app/partials/user/basicProfile.html
+++ b/app/partials/user/basicProfile.html
@@ -3,7 +3,7 @@
         <h2 class="title_h2"><i class="icon-wrench"></i> 基本信息</h2>
     </div>
 
-    <div class="col-xs-4  hidden-xs"  style="padding-top: 35px">
+    <div class="col-xs-3  hidden-xs"  style="padding-top: 35px">
         <div class="{{posterUploadMsgClass}}">
             <i ng-show="uplodingPoster"
                class="icon-spinner icon-spin icon-large"></i>{{posterUploadMsg}}
@@ -24,7 +24,7 @@
 
     <form name="the_form" class="form-horizontal">
 
-        <div class="col-md-7 col-xs-12">
+        <div class="col-md-7 col-xs-12" style="padding-left: 30px;padding-top: 20px">
             <div style="padding-bottom: 10px" ng-show="message">
                 <span class="{{messageClass}}">{{message}}</span>
             </div>
