--- a/app/partials/user/messages.html
+++ b/app/partials/user/messages.html
@@ -39,7 +39,7 @@
                 </div>
             </div>
 
-            <div ng-show="messages.length==0" style="text-align: center;padding-top: 10%">
+            <div ng-show="messages.length==0" style="text-align: center;padding-top: 10%;color: gray">
                 <span class="visible-xs">暂无消息</span>
                 <span class="hidden-xs"><h3>暂无消息</h3></span>
             </div>
